<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.project.syz.account_management.mainfunc.AddActivity">

    <TextView android:textSize="16.0sp" android:textColor="#ff8a8f9d"
        android:gravity="center_vertical" android:id="@+id/dateInfo"
        android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:layout_marginTop="10.0dip"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true" />

    <TextView android:textColor="#ff8a8f9d"
        android:textSize="16.0sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" android:layout_marginLeft="10.0dip"
        android:layout_toRightOf="@id/dateInfo" android:layout_alignTop="@id/dateInfo"
        android:text="@string/welInfo"/>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/checkLine"
        android:layout_below="@id/dateInfo">

        <TextView android:id="@+id/type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/type"
            android:textSize="16.0sp" android:textColor="#ff8a8f9d"/>

        <RadioGroup android:id="@+id/radioType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="10.0dip">

            <RadioButton android:id="@+id/income" android:layout_width="wrap_content" android:text="@string/income" android:layout_height="wrap_content" android:layout_gravity="center" ></RadioButton>
            <RadioButton android:id="@+id/expenditure" android:layout_width="wrap_content" android:text="@string/expenditure" android:layout_height="wrap_content" android:checked="true" android:layout_gravity="center" ></RadioButton>
        </RadioGroup>

    </LinearLayout>

    <TextView android:textSize="16.0sp"
        android:textColor="#ff8a8f9d"
        android:id="@+id/categoryInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/checkLine"
        android:text="@string/category"
        />

    <Spinner android:id="@+id/categorySpin" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:entries = "@array/expend"
        android:prompt = "@string/spin_prompt"
        android:layout_marginLeft="10.0dip"
        android:layout_toRightOf="@id/categoryInfo" android:layout_alignTop="@id/categoryInfo"/>


    <TextView android:textSize="16.0sp"
        android:textColor="#ff8a8f9d"
        android:id="@+id/money"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/categoryInfo"
        android:text="@string/money"
        android:paddingTop="?android:attr/actionBarSize"
        />

    <EditText android:id="@+id/editMoney"
        android:textSize="16.0sp"
        android:textColor="#ff8a8f9d"
        android:numeric="decimal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/money_hint"
        android:layout_toRightOf="@id/money" android:layout_alignTop="@id/money"
        android:paddingTop="?android:attr/actionBarSize"
        />

    <TextView android:textSize="16.0sp"
        android:textColor="#ff8a8f9d"
        android:id="@+id/memo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/money"
        android:text="@string/memo"
        android:paddingTop="?android:attr/actionBarSize"
        />

    <EditText android:id="@+id/editMemo"
        android:textSize="16.0sp"
        android:textColor="#ff8a8f9d"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/memo_hint"
        android:maxLength="100"
        android:paddingTop="?android:attr/actionBarSize"
        android:layout_toRightOf="@id/memo" android:layout_alignTop="@id/memo"
        />

    <Button android:id="@+id/submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:onClick="submit"
        android:layout_below="@id/editMemo"
        android:paddingTop="?android:attr/actionBarSize"
        android:layout_marginTop="@dimen/abc_action_bar_content_inset_material"/>


    <TextView android:textSize="16.0sp"
        android:textColor="#ff9c2208"
        android:id="@+id/balanceText"
        android:text="@string/balanceText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/submit"
        android:paddingTop="?android:attr/actionBarSize"
        />

    <TextView android:textSize="16.0sp"
        android:textColor="#ff9c2208"
        android:id="@+id/balanceMoney"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/balanceText" android:layout_alignTop="@id/balanceText"
        android:paddingTop="?android:attr/actionBarSize"
        />


</RelativeLayout>
