<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.project.syz.account_management.mainfunc.BudgetActivity">

    <Spinner android:id="@+id/spyear"
        android:textColor="#ff9d625e"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"/>

    <TextView android:id="@+id/yearInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16.0sp" android:textColor="#ff7b9d5f"
        android:text="@string/yearInfo"
        android:layout_toRightOf="@id/spyear" android:layout_alignTop="@id/spyear"
        />

    <Spinner android:id="@+id/spmonth" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#ff9d625e"
        android:layout_toRightOf="@id/yearInfo" android:layout_alignTop="@id/yearInfo" />

    <TextView android:id="@+id/monthInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16.0sp" android:textColor="#ff7b9d5f"
        android:text="@string/monthInfo"
        android:layout_toRightOf="@id/spmonth" android:layout_alignTop="@id/spmonth"
        />

    <Button android:id="@+id/search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search"
        android:onClick="search"
        android:layout_below="@id/spyear" />


    <ListView
        android:id="@+id/lv_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:cacheColorHint="@null"
        android:layout_below="@id/search"
        android:divider="@null" >
    </ListView>



</RelativeLayout>
